tests/errors/continue_outside_loop.py
# expect_error: SyntaxError
continue